<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="preferences">

    <PreferenceCategory
            android:key="ril_settings"
            android:title="@string/ril_settings_title">
        <SwitchPreference
            android:key="@string/pref_huawei_simsetting_key"
            android:summary="@string/pref_huawei_simsetting_description"
            android:title="@string/pref_huawei_simsetting_title" />
    </PreferenceCategory>

    <PreferenceCategory
            android:key="gestures_settings"
            android:title="@string/gestures_settings_title">
        <SwitchPreference
            android:key="@string/pref_huawei_dt2w_key"
            android:summary="@string/pref_huawei_dt2w_description"
            android:title="@string/pref_huawei_dt2w_title" />
    </PreferenceCategory>

</PreferenceScreen>
